Self-maintaining daily event ID

--- a/results/template.html
+++ b/results/template.html
@@ -30,8 +30,7 @@
 <div class="demo">
 	<h1>%title%</h1>
     <p>Created by <a href="https://reddit.com/u/Th3HolyMoose">/u/Th3HolyMoose</a></p><br>
-	<p>Source Code can be found here: </p>
-    
+    <p><a href="../index.php">Back to Index</a></p>
     <br>
     <p id="fileTime"></p>
     <script>
