--- a/results/template.html
+++ b/results/template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DiRT Rally Daily Results</title>
+	<title>DiRT Rally Daily Cross Platform Results</title>
 
 	<!-- Demo styling -->
 	<link href="motties/docs/css/jq.css" rel="stylesheet">
@@ -32,7 +32,9 @@
     <p>Created by <a href="https://reddit.com/u/Th3HolyMoose">/u/Th3HolyMoose</a></p><br>
     <p><a href="../index.php">Back to Index</a></p>
     <br>
-    <p id="fileTime"></p>
+	<p id="fileTime"></p>
+	<p>Updated hourly at the 50th minute</p>
+	<p>It's still a work in progress, if there are any issues or questions just send me a PM on reddit!</p>
     <script>
         var e = document.getElementById("fileTime");
         // Create a new JavaScript Date object based on the timestamp
