Added Nation Flags and Founder & VIP Status icons

--- a/results/template.html
+++ b/results/template.html
@@ -35,6 +35,7 @@
 	<p id="fileTime"></p>
 	<p>Updated hourly at the 50th minute</p>
 	<p>It's still a work in progress, if there are any issues or questions just send me a PM on reddit!</p>
+	<p>Nation Flags, "Founder" icon and "VIP" icon are properties of dirtgame.com, if I can't use them let me know!</p>
     <script>
         var e = document.getElementById("fileTime");
         // Create a new JavaScript Date object based on the timestamp
